--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "root",
+  "private": true,
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "expo": "lerna --scope=app run start --stream --"
   },
-  "dependencies": {
-    "expo": "~37.0.3",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
-    "react-native-screens": "~2.2.0",
-    "react-native-web": "~0.11.7"
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ],
+    "nohoist": [
+      "**/react-native",
+      "**/react-native/**",
+      "**/expo",
+      "**/expo/**"
+    ]
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "@types/react": "~16.9.23",
-    "@types/react-native": "~0.61.17",
-    "babel-preset-expo": "~8.1.0",
-    "typescript": "~3.8.3"
+    "lerna": "^3.20.2"
   },
-  "private": true
+  "dependencies": {
+    "metro-config": "^0.59.0"
+  }
 }
