--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -11,6 +11,7 @@
     "postinstall": "expo-yarn-workspaces postinstall"
   },
   "dependencies": {
+    "@types/react-router-native": "^5.1.0",
     "@types/styled-components": "^5.0.1",
     "expo": "~37.0.3",
     "react": "~16.9.0",
@@ -18,6 +19,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
+    "react-router-native": "^5.1.2",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
