--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -17,6 +17,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
+    "react-native-modal": "^11.5.6",
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
     "react-router-native": "^5.1.2",
