--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,8 @@
     "@types/react-router-native": "^5.1.0",
     "@types/styled-components": "^5.0.1",
     "expo": "~37.0.3",
+    "firebase": "^7.14.0",
+    "immer": "^6.0.3",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
